# SimpleICP

./: .gitignore  README.md
ICPalgorithm/: CMakeLists.txt  icp.cpp
